# Sourcetrail

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build-macos.yml
script/: build_macos.sh
setup/macOS/: bundle_macos.sh
src/lib/utility/: ConfigManager.cpp  ConfigManager.h  utilityXml.cpp  utilityXml.h
src/lib_cxx/utility/codeblocks/: CodeblocksCompiler.cpp  CodeblocksCompiler.h  CodeblocksProject.cpp  CodeblocksTarget.cpp  CodeblocksTarget.h  CodeblocksUnit.cpp  CodeblocksUnit.h
